external/The-Forge/Common_3/Resources/ResourceLoader/Interfaces/IResourceLoader.h

typedef struct MappedMemoryRange
{
    uint8_t* pData;
    Buffer*  pBuffer;
    uint64_t mOffset;
    uint64_t mSize;
    uint32_t mFlags;
} MappedMemoryRange;
typedef enum TextureContainerType
{
    TEXTURE_CONTAINER_DEFAULT = 0,
    TEXTURE_CONTAINER_DDS,
    TEXTURE_CONTAINER_KTX,
    TEXTURE_CONTAINER_GNF,
} TextureContainerType;
typedef struct BufferLoadDesc
{
    Buffer**    ppBuffer;
    const void* pData;
    BufferDesc  mDesc;
    bool        mForceReset;
    Buffer*  pSrcBuffer;
    uint64_t mSrcOffset;
} BufferLoadDesc;
typedef struct TextureLoadDesc
{
    Texture** ppTexture;
    union
    {
        struct
        {
            TextureDesc* pDesc;
            bool         mForceReset;
        };
        Sampler* pYcbcrSampler;
    };
    const char*          pFileName;
#if defined(TIDES)
    const void* pTextureData;
    size_t mTextureDataSize;
#endif
    uint32_t             mNodeIndex;
    TextureCreationFlags mCreationFlag;
    TextureContainerType mContainer;
} TextureLoadDesc;
typedef struct BufferChunk
{
    uint32_t mOffset;
    uint32_t mSize;
} BufferChunk;
typedef struct BufferChunkAllocator
{
    Buffer*      pBuffer;
    uint32_t     mUsedChunkCount;
    uint32_t     mSize;
    BufferChunk* mUnusedChunks;
} BufferChunkAllocator;
typedef struct GeometryBuffer
{
    BufferChunkAllocator mIndex;
    BufferChunkAllocator mVertex[MAX_VERTEX_BINDINGS];
} GeometryBuffer;
typedef struct MeshletData
{
    float3 center;
    float  radius;
    float3 coneApex;
    float3 coneAxis;
    float  coneCutoff; 
} MeshletData;
typedef struct GeometryMeshlets
{
    uint64_t     mMeshletCount;
    Meshlet*     mMeshlets;
    MeshletData* mMeshletsData;
    uint64_t  mVertexCount;
    uint32_t* mVertices;
    uint64_t mTriangleCount;
    uint8_t* mTriangles;
} GeometryMeshlets;
typedef struct Geometry
{
    union
    {
        struct
        {
            Buffer* pIndexBuffer;
            Buffer* pVertexBuffers[MAX_VERTEX_BINDINGS];
        };
        struct
        {
            BufferChunk mIndexBufferChunk;
            BufferChunk mVertexBufferChunks[MAX_VERTEX_BINDINGS];
        };
    };
    IndirectDrawIndexArguments* pDrawArgs;
    uint32_t mVertexStrides[MAX_VERTEX_BINDINGS];
    uint32_t mVertexBufferCount : 8;
    uint32_t mIndexType : 2;
    uint32_t mDrawArgCount : 22;
    uint32_t mIndexCount;
    uint32_t mVertexCount;
    GeometryBuffer* pGeometryBuffer;
    GeometryMeshlets meshlets;
#if defined(TIDES)
    float mAabbMin[3];
    float mAabbMax[3];
    float mAabbCenter[3];
    float mRadius;
    uint32_t mPad[10];
#else
    uint32_t mPad[20];
#endif
} Geometry;
typedef struct GeometryData
{
    struct Hair
    {
        uint32_t mVertexCountPerStrand;
        uint32_t mGuideCountPerStrand;
    };
    struct ShadowData
    {
        void* pIndices;
        void* pAttributes[MAX_SEMANTICS];
        uint32_t mVertexStrides[MAX_SEMANTICS];
        uint32_t mAttributeCount[MAX_SEMANTICS];
    };
    ShadowData* pShadow;
    mat4*     pInverseBindPoses;
    uint32_t* pJointRemaps;
    uint32_t mJointCount;
    Hair mHair;
    uint32_t mPad0[1];
    MeshletData* meshlets;
    void*    pUserData;
    uint32_t mUserDataSize;
    uint32_t mPad1[5];
} GeometryData;
typedef enum GeometryLoadFlags
{
    GEOMETRY_LOAD_FLAG_NONE = 0x0,
    GEOMETRY_LOAD_FLAG_SHADOWED = 0x1,
    GEOMETRY_LOAD_FLAG_STRUCTURED_BUFFERS = 0x2,
    GEOMETRY_LOAD_FLAG_RAYTRACING_INPUT = 0x4,
} GeometryLoadFlags;
typedef struct GeometryBufferLayoutDesc
{
    IndexType mIndexType;
    uint32_t  mVerticesStrides[MAX_VERTEX_BINDINGS];
    uint32_t  mSemanticBindings[SEMANTIC_TEXCOORD9 + 1];
} GeometryBufferLayoutDesc;
typedef struct GeometryLoadDesc
{
    Geometry**     ppGeometry;
    GeometryData** ppGeometryData;
    const char*         pFileName;
    GeometryLoadFlags   mFlags;
    uint32_t            mNodeIndex;
    const VertexLayout* pVertexLayout;
    GeometryBuffer* pGeometryBuffer;
    GeometryBufferLayoutDesc* pGeometryBufferLayoutDesc;
} GeometryLoadDesc;
typedef struct BufferUpdateDesc
{
    Buffer*  pBuffer;
    uint64_t mDstOffset;
    uint64_t mSize;
    void* pMappedData;
    Buffer*       pSrcBuffer;
    uint64_t      mSrcOffset;
    ResourceState mCurrentState;
    struct
    {
        MappedMemoryRange mMappedRange;
    } mInternal;
} BufferUpdateDesc;
typedef struct TextureSubresourceUpdate
{
    uint32_t mDstRowStride;
    uint32_t mRowCount;
    uint32_t mSrcRowStride;
    uint32_t mDstSliceStride;
    uint32_t mSrcSliceStride;
    uint8_t* pMappedData;
} TextureSubresourceUpdate;
typedef struct TextureUpdateDesc
{
    Texture*      pTexture;
    uint32_t      mBaseMipLevel;
    uint32_t      mMipLevels;
    uint32_t      mBaseArrayLayer;
    uint32_t      mLayerCount;
    ResourceState mCurrentState;
    Cmd*          pCmd;
    FORGE_RENDERER_API TextureSubresourceUpdate getSubresourceUpdateDesc(uint32_t mip, uint32_t layer);
    struct
    {
        MappedMemoryRange mMappedRange;
        uint32_t          mDstSliceStride;
        bool              mSkipBarrier;
    } mInternal;
} TextureUpdateDesc;
typedef struct TextureCopyDesc
{
    Texture*      pTexture;
    Buffer*       pBuffer;
    Semaphore*    pWaitSemaphore;
    uint32_t      mTextureMipLevel;
    uint32_t      mTextureArrayLayer;
    ResourceState mTextureState;
    QueueType     mQueueType;
    uint64_t      mBufferOffset;
} TextureCopyDesc;
typedef struct ShaderStageLoadDesc
{ 
    const char* pFileName;
    const char* pEntryPointName;
} ShaderStageLoadDesc;
typedef struct ShaderLoadDesc
{
    ShaderStageLoadDesc mVert;
    ShaderStageLoadDesc mFrag;
    ShaderStageLoadDesc mGeom;
    ShaderStageLoadDesc mHull;
    ShaderStageLoadDesc mDomain;
    ShaderStageLoadDesc mComp;
#if defined(ENABLE_WORKGRAPH)
    ShaderStageLoadDesc mGraph;
#endif
#if defined(TIDES)
    ShaderStageLoadDesc mAmplification;
    ShaderStageLoadDesc mMesh;
#endif
    const ShaderConstant* pConstants;
    uint32_t              mConstantCount;
} ShaderLoadDesc;
typedef struct PipelineCacheLoadDesc
{
    const char*        pFileName;
    PipelineCacheFlags mFlags;
} PipelineCacheLoadDesc;
typedef struct PipelineCacheSaveDesc
{
    const char* pFileName;
} PipelineCacheSaveDesc;
typedef uint64_t SyncToken;
struct Material;
typedef struct ResourceLoaderDesc
{
    uint64_t mBufferSize;
    uint32_t mBufferCount;
    bool     mSingleThreaded;
#ifdef ENABLE_FORGE_MATERIALS
    bool mUseMaterials;
#endif
} ResourceLoaderDesc;
FORGE_RENDERER_API extern ResourceLoaderDesc gDefaultResourceLoaderDesc;
FORGE_RENDERER_API void initResourceLoaderInterface(Renderer* pRenderer, ResourceLoaderDesc* pDesc = nullptr);
FORGE_RENDERER_API void exitResourceLoaderInterface(Renderer* pRenderer);
FORGE_RENDERER_API void initResourceLoaderInterface(Renderer** ppRenderers, uint32_t rendererCount, ResourceLoaderDesc* pDesc = nullptr);
FORGE_RENDERER_API void exitResourceLoaderInterface(Renderer** ppRenderers, uint32_t rendererCount);
FORGE_RENDERER_API uint32_t addMaterial(const char* pMaterialFileName, Material** pMaterial, SyncToken* pSyncToken);
FORGE_RENDERER_API void     removeMaterial(Material* pMaterial);
FORGE_RENDERER_API uint32_t getMaterialSetIndex(Material* pMaterial, const char* name);
FORGE_RENDERER_API void     getMaterialShader(Material* pMaterial, uint32_t materialSetIndex, Shader** ppOutShader);
FORGE_RENDERER_API void     getMaterialTextures(Material* pMaterial, uint32_t materialSetIndex, const char** ppOutTextureBindingNames,
                                                Texture** ppOutTextures, uint32_t outTexturesSize);
FORGE_RENDERER_API void getResourceSizeAlign(const BufferLoadDesc* pDesc, ResourceSizeAlign* pOut);
FORGE_RENDERER_API void getResourceSizeAlign(const TextureLoadDesc* pDesc, ResourceSizeAlign* pOut);
FORGE_RENDERER_API void addResource(BufferLoadDesc* pBufferDesc, SyncToken* token);
FORGE_RENDERER_API void addResource(TextureLoadDesc* pTextureDesc, SyncToken* token);
FORGE_RENDERER_API void addResource(GeometryLoadDesc* pGeomDesc, SyncToken* token);
FORGE_RENDERER_API void addGeometryBuffer(GeometryBufferLoadDesc* pDesc);
FORGE_RENDERER_API void beginUpdateResource(BufferUpdateDesc* pBufferDesc);
FORGE_RENDERER_API void beginUpdateResource(TextureUpdateDesc* pTextureDesc);
FORGE_RENDERER_API void endUpdateResource(BufferUpdateDesc* pBuffer);
FORGE_RENDERER_API void endUpdateResource(TextureUpdateDesc* pTexture);
FORGE_RENDERER_API void addGeometryBufferPart(BufferChunkAllocator* buffer, uint32_t size, uint32_t alignment, BufferChunk* pOut,
                                              BufferChunk* pPreferredChunk = NULL);
FORGE_RENDERER_API void removeGeometryBufferPart(BufferChunkAllocator* buffer, BufferChunk* chunk);
typedef struct FlushResourceUpdateDesc
{
    uint32_t    mNodeIndex;
    uint32_t    mWaitSemaphoreCount;
    Semaphore** ppWaitSemaphores;
    Fence*      pOutFence;
    Semaphore*  pOutSubmittedSemaphore;
} FlushResourceUpdateDesc;
FORGE_RENDERER_API void flushResourceUpdates(FlushResourceUpdateDesc* pDesc);
FORGE_RENDERER_API void copyResource(TextureCopyDesc* pTextureDesc, SyncToken* token);
FORGE_RENDERER_API void removeGeometryBuffer(GeometryBuffer* pGeomBuffer);
FORGE_RENDERER_API bool allResourceLoadsCompleted();
FORGE_RENDERER_API bool      isTokenCompleted(const SyncToken* token);