external/The-Forge/Common_3/Resources/ResourceLoader/Interfaces/IResourceLoader.zig


pub const GeometryLoadDesc = extern struct {
    /// Output geometry
    ppGeometry: [*c][*c]Geometry,
    ppGeometryData: [*c][*c]GeometryData,
    /// Filename of geometry container
    pFileName: [*c]const u8,
    /// Loading flags
    mFlags: GeometryLoadFlags,
    /// Linked gpu node / Unlinked Renderer index
    mNodeIndex: u32,
    /// Specifies how to arrange the vertex data loaded from the file into GPU memory
    pVertexLayout: [*c]const VertexLayout,
    /// Optional preallocated unified buffer for geometry.
    /// When this parameter is specified, Geometry::pDrawArgs values are going
    /// to be shifted according to index/vertex location within BufferChunkAllocator.
    pGeometryBuffer: [*c]GeometryBuffer,
    /// Used to convert data to desired state inside GeometryBuffer.
    pGeometryBufferLayoutDesc: [*c]GeometryBufferLayoutDesc,
};

pub const BufferUpdateDesc = extern struct {
    pBuffer: [*c]Buffer,
    mDstOffset: u64,
    mSize: u64,
    /// To be filled by the caller between beginUpdateResource and endUpdateResource calls
    /// Example:
    /// BufferUpdateDesc update = { pBuffer, bufferDstOffset };
    /// beginUpdateResource(
    ///&update
    ///);
    /// ParticleVertex* vertices = (ParticleVertex*)update.pMappedData;
    ///   for (uint32_t i = 0; i
    ///<
    /// particleCount; ++i)
    ///     vertices[i] = { rand() };
    /// endUpdateResource(
    ///&update
    ///,
    ///&token
    ///);
    pMappedData: ?*anyopaque,
    /// Optional (if user provides staging buffer memory)
    pSrcBuffer: [*c]Buffer,
    mSrcOffset: u64,
    mCurrentState: ResourceState,
    mInternal: __Struct0,

    /// Internal
    pub const __Struct0 = extern struct {
        mMappedRange: MappedMemoryRange,
    };
};

pub const TextureSubresourceUpdate = extern struct {
    /// Filled by ResourceLaoder in beginUpdateResource
    /// Size of each row in destination including padding - Needs to be respected otherwise texture data will be corrupted if dst row stride
    /// is not the same as src row stride
    mDstRowStride: u32,
    /// Number of rows in this slice of the texture
    mRowCount: u32,
    /// Src row stride for convenience (mRowCount * width * texture format size)
    mSrcRowStride: u32,
    /// Size of each slice in destination including padding - Use for offsetting dst data updating 3D textures
    mDstSliceStride: u32,
    /// Size of each slice in src - Use for offsetting src data when updating 3D textures
    mSrcSliceStride: u32,
    /// To be filled by the caller
    /// Example:
    /// BufferUpdateDesc update = { pTexture, 2, 1 };
    /// beginUpdateResource(
    ///&update
    ///);
    /// Row by row copy is required if mDstRowStride > mSrcRowStride. Single memcpy will work if mDstRowStride == mSrcRowStride
    /// 2D
    /// for (uint32_t r = 0; r
    ///<
    /// update.mRowCount; ++r)
    ///     memcpy(update.pMappedData + r * update.mDstRowStride, srcPixels + r * update.mSrcRowStride, update.mSrcRowStride);
    /// 3D
    /// for (uint32_t z = 0; z
    ///<
    /// depth; ++z)
    /// {
    ///     uint8_t* dstData = update.pMappedData + update.mDstSliceStride * z;
    ///     uint8_t* srcData = srcPixels + update.mSrcSliceStride * z;
    ///     for (uint32_t r = 0; r
    ///<
    /// update.mRowCount; ++r)
    ///         memcpy(dstData + r * update.mDstRowStride, srcData + r * update.mSrcRowStride, update.mSrcRowStride);
    /// }
    /// endUpdateResource(
    ///&update
    ///,
    ///&token
    ///);
    pMappedData: [*c]u8,
};

/// #NOTE: Only use for procedural textures which are created on CPU (noise textures, font texture, ...)
pub const TextureUpdateDesc = extern struct {
    pTexture: [*c]Texture,
    mBaseMipLevel: u32,
    mMipLevels: u32,
    mBaseArrayLayer: u32,
    mLayerCount: u32,
    mCurrentState: ResourceState,
    /// Optional - If we want to run the update on user specified command buffer instead
    pCmd: [*c]Cmd,
    mInternal: __Struct0,

    extern fn _1_TextureUpdateDesc_getSubresourceUpdateDesc_(self: *TextureUpdateDesc, mip: u32, layer: u32) TextureSubresourceUpdate;
    pub const getSubresourceUpdateDesc = _1_TextureUpdateDesc_getSubresourceUpdateDesc_;

    /// Internal
    pub const __Struct0 = extern struct {
        mMappedRange: MappedMemoryRange,
        mDstSliceStride: u32,
        mSkipBarrier: bool,
    };
};

/// #NOTE: Only use for procedural textures which are created on CPU (noise textures, font texture, ...)
pub const TextureCopyDesc = extern struct {
    pTexture: [*c]Texture,
    pBuffer: [*c]Buffer,
    /// Semaphore to synchronize graphics/compute operations that write to the texture with the texture -> buffer copy.
    pWaitSemaphore: [*c]Semaphore,
    mTextureMipLevel: u32,
    mTextureArrayLayer: u32,
    /// Current texture state.
    mTextureState: ResourceState,
    /// Queue the texture is copied from.
    mQueueType: QueueType,
    mBufferOffset: u64,
};

pub const ShaderStageLoadDesc = extern struct {
    pFileName: [*c]const u8,
    pEntryPointName: [*c]const u8,
};

pub const ShaderLoadDesc = extern struct {
    mVert: ShaderStageLoadDesc,
    mFrag: ShaderStageLoadDesc,
    mGeom: ShaderStageLoadDesc,
    mHull: ShaderStageLoadDesc,
    mDomain: ShaderStageLoadDesc,
    mComp: ShaderStageLoadDesc,
    mGraph: ShaderStageLoadDesc,
    mAmplification: ShaderStageLoadDesc,
    mMesh: ShaderStageLoadDesc,
    pConstants: [*c]const ShaderConstant,
    mConstantCount: u32,
};

pub const PipelineCacheLoadDesc = extern struct {
    pFileName: [*c]const u8,
    mFlags: PipelineCacheFlags,
};

pub const PipelineCacheSaveDesc = extern struct {
    pFileName: [*c]const u8,
};

pub const SyncToken = u64;

pub const ResourceLoaderDesc = extern struct {
    mBufferSize: u64,
    mBufferCount: u32,
    mSingleThreaded: bool,
    mUseMaterials: bool,
};

extern var _1_gDefaultResourceLoaderDesc_: *ResourceLoaderDesc;
pub const gDefaultResourceLoaderDesc = _1_gDefaultResourceLoaderDesc_;

extern fn _1_initResourceLoaderInterface_(pRenderer: *Renderer, pDesc: *ResourceLoaderDesc) void;
/// MARK: - Resource Loader Functions
pub fn initResourceLoaderInterface(
    pRenderer: *Renderer,
    pDesc: *ResourceLoaderDesc,
) void {
    return _1_initResourceLoaderInterface_(pRenderer, pDesc);
}

extern fn _1_exitResourceLoaderInterface_(pRenderer: *Renderer) void;
pub const exitResourceLoaderInterface = _1_exitResourceLoaderInterface_;

extern fn _2_initResourceLoaderInterface_(ppRenderers: [*c][*c]Renderer, rendererCount: u32, pDesc: [*c]ResourceLoaderDesc) void;
/// Multiple Renderer (unlinked GPU) variants. The Resource Loader must be shared between Renderers.
pub fn initResourceLoaderInterface__Overload2(
    ppRenderers: [*c][*c]Renderer,
    rendererCount: u32,
    __opt: struct {
        pDesc: [*c]ResourceLoaderDesc = null,
    },
) void {
    return _2_initResourceLoaderInterface_(ppRenderers, rendererCount, __opt.pDesc);
}

extern fn _2_exitResourceLoaderInterface_(ppRenderers: [*c][*c]Renderer, rendererCount: u32) void;
pub const exitResourceLoaderInterface__Overload2 = _2_exitResourceLoaderInterface_;

extern fn _1_addMaterial_(pMaterialFileName: [*c]const u8, pMaterial: [*c][*c]Material, pSyncToken: [*c]SyncToken) u32;
/// Will load a material and all related shaders/textures (if they are not already loaded, Material shaders/textures are shared across all
/// Materials)
pub const addMaterial = _1_addMaterial_;

extern fn _1_removeMaterial_(pMaterial: [*c]Material) void;
/// Will unload all the related shaders/textures (if they are not still used by some other Material)
pub const removeMaterial = _1_removeMaterial_;

extern fn _1_getMaterialSetIndex_(pMaterial: [*c]Material, name: [*c]const u8) u32;
/// TODO: Functions below are a simple interface to get resources from materials, as we develop materials further this interface will
/// probably change.
pub const getMaterialSetIndex = _1_getMaterialSetIndex_;

extern fn _1_getMaterialShader_(pMaterial: [*c]Material, materialSetIndex: u32, ppOutShader: [*c][*c]Shader) void;
pub const getMaterialShader = _1_getMaterialShader_;

extern fn _1_getMaterialTextures_(pMaterial: [*c]Material, materialSetIndex: u32, ppOutTextureBindingNames: [*c]const [*c]u8, ppOutTextures: [*c][*c]Texture, outTexturesSize: u32) void;
pub const getMaterialTextures = _1_getMaterialTextures_;

extern fn _1_getResourceSizeAlign_(pDesc: [*c]const BufferLoadDesc, pOut: [*c]ResourceSizeAlign) void;
/// MARK: addResource and updateResource
pub const getResourceSizeAlign = _1_getResourceSizeAlign_;

extern fn _2_getResourceSizeAlign_(pDesc: [*c]const TextureLoadDesc, pOut: [*c]ResourceSizeAlign) void;
pub const getResourceSizeAlign__Overload2 = _2_getResourceSizeAlign_;

extern fn _1_addResource_(pBufferDesc: [*c]BufferLoadDesc, token: [*c]SyncToken) void;
/// If token is NULL, the resource will be available when allResourceLoadsCompleted() returns true.
/// If token is non NULL, the resource will be available after isTokenCompleted(token) returns true.
pub const addResource = _1_addResource_;

extern fn _2_addResource_(pTextureDesc: [*c]TextureLoadDesc, token: [*c]SyncToken) void;
pub const addResource__Overload2 = _2_addResource_;

extern fn _3_addResource_(pGeomDesc: [*c]GeometryLoadDesc, token: [*c]SyncToken) void;
pub const addResource__Overload3 = _3_addResource_;

extern fn _1_addGeometryBuffer_(pDesc: [*c]GeometryBufferLoadDesc) void;
pub const addGeometryBuffer = _1_addGeometryBuffer_;

extern fn _1_beginUpdateResource_(pBufferDesc: [*c]BufferUpdateDesc) void;
pub const beginUpdateResource = _1_beginUpdateResource_;

extern fn _2_beginUpdateResource_(pTextureDesc: [*c]TextureUpdateDesc) void;
pub const beginUpdateResource__Overload2 = _2_beginUpdateResource_;

extern fn _1_endUpdateResource_(pBuffer: [*c]BufferUpdateDesc) void;
pub const endUpdateResource = _1_endUpdateResource_;

extern fn _2_endUpdateResource_(pTexture: [*c]TextureUpdateDesc) void;
pub const endUpdateResource__Overload2 = _2_endUpdateResource_;

extern fn _1_addGeometryBufferPart_(buffer: [*c]BufferChunkAllocator, size: u32, alignment: u32, pOut: [*c]BufferChunk, pPreferredChunk: [*c]BufferChunk) void;
/// This function is used to acquire geometry buffer location.
/// It can be used on index or vertex buffer
/// When there are no continious chunk with enough size, output chunk contains 0 size.
/// Use releaseGeometryBufferPart to release chunk.
/// Make sure all chunks are released before removeGeometryBuffer.
pub fn addGeometryBufferPart(
    buffer: [*c]BufferChunkAllocator,
    size: u32,
    alignment: u32,
    pOut: [*c]BufferChunk,
    __opt: struct {
        pPreferredChunk: [*c]BufferChunk = null,
    },
) void {
    return _1_addGeometryBufferPart_(buffer, size, alignment, pOut, __opt.pPreferredChunk);
}

extern fn _1_removeGeometryBufferPart_(buffer: [*c]BufferChunkAllocator, chunk: [*c]BufferChunk) void;
/// Release previously claimed chunk to buffer.
/// Buffer must be the one passed to claimGeometryBufferPart for this chunk.
pub const removeGeometryBufferPart = _1_removeGeometryBufferPart_;

pub const FlushResourceUpdateDesc = extern struct {
    mNodeIndex: u32,
    mWaitSemaphoreCount: u32,
    ppWaitSemaphores: [*c][*c]Semaphore,
    pOutFence: [*c]Fence,
    pOutSubmittedSemaphore: [*c]Semaphore,
};

extern fn _1_flushResourceUpdates_(pDesc: [*c]FlushResourceUpdateDesc) void;
pub const flushResourceUpdates = _1_flushResourceUpdates_;

extern fn _1_copyResource_(pTextureDesc: [*c]TextureCopyDesc, token: [*c]SyncToken) void;
/// Copies data from GPU to the CPU, typically for transferring it to another GPU in unlinked mode.
/// For optimal use, the amount of data to transfer should be minimized as much as possible and applications should
/// provide additional graphics/compute work that the GPU can execute alongside the copy.
pub const copyResource = _1_copyResource_;
